--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -14,7 +14,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest]
-        matlab-release: [R2021b, latest]
+        matlab-release: [R2022a, latest]
 
     runs-on: ${{ matrix.os }}
     steps:
@@ -25,8 +25,8 @@ jobs:
         if: runner.os == 'Linux'
         run: |
           sudo apt-get update
-          # sudo apt-get install -y xvfb
-          sudo apt-get install -y xvfb libxcb-xinerama0 libxcb-icccm4 libxcb-image0 libxcb-keysyms1 libxcb-randr0 libxcb-render-util0 libxcb-xfixes0 libxcb-shape0
+          sudo apt-get install -y xvfb
+          # sudo apt-get install -y xvfb libxcb-xinerama0 libxcb-icccm4 libxcb-image0 libxcb-keysyms1 libxcb-randr0 libxcb-render-util0 libxcb-xfixes0 libxcb-shape0
           Xvfb :99 -ac &
           echo "DISPLAY=:99" >> $GITHUB_ENV
           # exec 6>display.log && Xvfb -displayfd 6 -ac -screen 0 1600x1200x24 -dpi 100 -extension RANDR &
