--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -14,7 +14,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest]
-        matlab-release: [R2022a, latest]
+        matlab-release: [R2022b, latest]
 
     runs-on: ${{ matrix.os }}
     steps:
