added tests -disp port

--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -27,12 +27,12 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y xvfb
           # sudo apt-get install -y xvfb libxcb-xinerama0 libxcb-icccm4 libxcb-image0 libxcb-keysyms1 libxcb-randr0 libxcb-render-util0 libxcb-xfixes0 libxcb-shape0
-          Xvfb :99 -ac &
-          echo "DISPLAY=:99" >> $GITHUB_ENV
-          # exec 6>display.log && Xvfb -displayfd 6 -ac -screen 0 1600x1200x24 -dpi 100 -extension RANDR &
+          # Xvfb :99 -ac &
+          # echo "DISPLAY=:99" >> $GITHUB_ENV
+          exec 6>display.log && Xvfb -displayfd 6 -ac -screen 0 1600x1200x24 -dpi 100 -extension RANDR &
           # exec 6>display.log && Xvfb -displayfd 6 -ac &
-          # DISPLAY_PORT=$(cat display.log)
-          # echo "DISPLAY=:$DISPLAY_PORT" >> $GITHUB_ENV
+          DISPLAY_PORT=$(cat display.log)
+          echo "DISPLAY=:$DISPLAY_PORT" >> $GITHUB_ENV
 
       - name: Set up MATLAB ${{ matrix.matlab-release }}
         # Use MATLAB Actions to get running MATLAB in GitHub Actions
